gestione abilitazioni in corso