@@ -33,7 +33,7 @@ public class ApparecchiaturaLinkAdapter implements JsonbAdapter<Apparecchiatura,
 
     @Override
     public Apparecchiatura adaptFromJson(JsonObject obj) throws Exception {
-        return store.find(new Long(obj.getInt("id")));
+        return store.find(Long.valueOf(obj.getInt("id")));
     }
 
 }
