@@ -31,7 +31,7 @@ public class AziendaLinkAdapter implements JsonbAdapter<Azienda, JsonObject> {
 
     @Override
     public Azienda adaptFromJson(JsonObject obj) throws Exception {
-        return store.find(new Long(obj.getInt("id")));
+        return store.find(Long.valueOf(obj.getInt("id")));
     }
 
 }
