@@ -31,7 +31,7 @@ public class DominioLinkAdapter implements JsonbAdapter<Dominio, JsonObject> {
 
     @Override
     public Dominio adaptFromJson(JsonObject obj) throws Exception {
-        return store.find(new Long(obj.getInt("id")));
+        return store.find(Long.valueOf(obj.getInt("id")));
     }
 
 }
