@@ -31,7 +31,7 @@ public class LaboratorioLinkAdapter implements JsonbAdapter<Laboratorio, JsonObj
 
     @Override
     public Laboratorio adaptFromJson(JsonObject obj) throws Exception {
-        return store.find(new Long(obj.getInt("id")));
+        return store.find(Long.valueOf(obj.getInt("id")));
     }
 
      
